[project]
name = "authmint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shaileshpandit141", email = "shaileshpandit141@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
authmint = "authmint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
